# bazel-swift-sha256sum-example

./: BUILD.bazel  BUILD.homebrew  README.md  WORKSPACE
swift/sha256/: BUILD.bazel
