config_setting(
    name = "macos_arm",
    values = {
        "cpu": "darwin_arm64",
    },
    constraint_values = [
        "@platforms//os:macos",
    ],
    visibility = ["//:__subpackages__"],
)

config_setting(
    name = "macos_intel",
    constraint_values = [
        "@platforms//os:macos",
        "@platforms//cpu:x86_64",
    ],
    visibility = ["//:__subpackages__"],
)
